# RayTracing_Simple

./: .gitignore  CMakeLists.txt  HelloWorldVS10.sln  HelloWorldVS10.vcxproj  HelloWorld_Kernel.cl  Main.c  Makefile  README.md  caustic_test.scene  premake5.lua  scene.h  setupGL.c  utility.c  vec.c  vec.h
SimpleRT/: CMakeLists.txt
SimpleRT/Scene/: complex_test.scn  cornell_test.scn  demo.scn
SimpleRT/include/: Camera.hpp  CmConfig.hpp  CmSVMAllocator.hpp  Config.hpp  OpenCLConfig.hpp  Ray.hpp  Scene.hpp  SetupGL.hpp  Sphere.hpp  Utility.hpp  Vec.hpp  camera.h  ray.h  sphere.h
SimpleRT/kernel/: RayTracing_Cm.cpp  RayTracing_Cm_SVM.cpp  RayTracing_Common.hpp  RayTracing_Kernel.cl
SimpleRT/src/: CmConfig.cpp  CmSVMAllocator.cpp  Config.cpp  Main.c  Main.cpp  OpenCLConfig.cpp  Scene.cpp  SetupGL.cpp  Utility.cpp  Vec.cpp  setupGL.c  utility.c
